썸네일 주소 변경]

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ xc<!DOCTYPE html>
     <meta name="keywords" content="BTS 멤버 닮은꼴 찾기, 인공지능 BTS 멤버 닮은꼴 찾기, 나와 닮은 연예인, BTS, 얼굴 평가, 제이홉, 랩몬스터, 슈가, 지민, 뷔, 정국, 진">
     <meta name="author" content="코난쌤">
     <link rel="stylesheet" href="style.css">
-    <link rel="canonical" href="https://squidgameai.netlify.app/" />
-    <meta property="og:url" content="https://squidgameai.netlify.app/" />
+    <link rel="canonical" href="https://www.khyeon.ga//" />
+    <meta property="og:url" content="https://www.khyeon.ga/" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="BTS 멤버 닮은꼴" />
     <meta property="og:description" content="BTS 멤버 닮은꼴 찾기, 인공지능 BTS 멤버 닮은꼴 찾기, 나와 닮은 연예인, 얼굴 평가, 제이홉, 랩몬스터, 슈가, 지민, 뷔"
@@ -87,7 +87,7 @@ xc<!DOCTYPE html>
                     case "Jin":
                         resultTitle = "진"
                         resultExplain = ""
-                        resultCeleb = "서브보컬, 비주얼"
+                        resultCeleb = "서브보컬, 비주얼"  
                         resultpic = "./Jin.jpg"
                         break;    
                     default:
@@ -248,7 +248,7 @@ xc<!DOCTYPE html>
   <!-- Go to www.addthis.com/dashboard to customize your tools -->
   <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-61e0fe930cbe248d"></script>
     
-  
+
   <div id="disqus_thread"></div>
 <script>
     /**
